fix: code loop failure in vennChart, increased z-index for svg g

--- a/css/main.css
+++ b/css/main.css
@@ -599,7 +599,7 @@
   }
 
   svg g[data-active="true"] {
-    @apply z-2;
+    @apply z-10;
   }
 
 }
